--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "prettier": "^2.5.1"
   },
   "dependencies": {
+    "@hapi/boom": "^9.1.4",
+    "colors": "^1.4.0",
     "express": "^4.17.1",
-    "faker": "^5.5.3"
+    "faker": "^5.5.3",
+    "joi": "^17.5.0"
   }
 }
